# mlops-churn-reference

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lab01-foundation.yml  lab02-data-job.yml
data/telco-churn/: download.py
data/telco-churn/mltable/: MLTable
docs/: lab01-cicd-troubleshooting.md
infra/: main.bicep  main.json  shared.bicep  shared.json
infra/env/: dev.bicepparam  prod.bicepparam
infra/modules/: acr.bicep  appinsights.bicep  compute.bicep  keyvault.bicep  network.bicep  storage.bicep  workspace.bicep
labs/01-foundation/: README.md
labs/01-foundation/verify/: conftest.py  test_lab01.py
labs/02-data-and-job/: README.md  TROUBLESHOOTING.md  run.sh
labs/02-data-and-job/assets/: mltable.yml  uri_file.yml  uri_folder.yml
labs/02-data-and-job/jobs/: train_mltable.yml  train_uri_file.yml  train_uri_folder.yml
labs/02-data-and-job/src/: conda.yml  train.py
labs/02-data-and-job/verify/: conftest.py  test_lab02.py
