[project]
name = "mlops-churn-reference"
version = "0.1.0"
description = "MLOps reference platform for customer churn prediction"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-ml>=1.20.0",
    "azure-identity>=1.17.0",
    "mlflow>=2.16.0",
    "azureml-mlflow>=1.57.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-azurepipelines>=1.0",
    "ruff>=0.6.0",
    "mkdocs-material>=9.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
